Config handling, Logger and log handling, Update Readme, Maven 2x archive artifacts.